<resources>
    <string name="pust"> </string>
    <string name="app_name">The Long Dark Handbook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Справочник TheLongDark</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="story">История</string>
    <string name="episode1">Эпизод 1. Не уходи смиренно</string>
    <string name="episode2">Эпизод 2. Световая фуга</string>
    <string name="episode3">Эпизод 3. Элегия распутья</string>
    <string name="map">Карты</string>
    <string name="subject">Предметы</string>
    <string name="tip">Животные</string>
    <string name="setting">Настройки</string>
    <string name="person">Персонажи</string>
    <string name="VK">Группа VK</string>
    <string name="map1">Загадочное озеро</string>
    <string name="map2">ЖД ветка "Водопады ворона"</string>
    <string name="map3">Прибрежное шоссе</string>
    <string name="map4">Разбитое шоссе</string>
    <string name="map5">Зона запустения</string>
    <string name="map6">ГЭС "Картер" и окружение</string>
    <string name="map7">Отрадная долина</string>
    <string name="map8">Волчья гора</string>
    <string name="map9">Одинокая топь</string>
    <string name="map10">Разбитая железная дорога</string>
    <string name="map11">Милтон</string>
    <string name="map12">Долина Тихой реки</string>
    <string name="map1text"> \n&#160;&#160;Эта локация представляет  собой сочетание высоких скалистых гор, лесных массивов, завораживающих своей красотой, и заснеженных холмов. В середине всего этого великолепия находится огромное замерзшее озеро, на льду которого расположены домики для рыбалки. На юго-восточном берегу озера есть берлога, где обитает медведь, кроме того, по льду озера обычно бродит три-четыре волка. \n
\n&#160;&#160;Данная местность идеально подходит для новичков,так как на ней сбалансированно количество необитаемых территорий и рукотворных сооружений, много ресурсов и дикой жизни. \n
\n&#160;&#160;Пожалуй, самой значимой постройкой на этой локации является Администрация турбазы (Camp office), которая расположена примерно в центре локации между железной дорогой и озером. В ясную погоду можно рассмотреть домики на противоположной стороне озера. Если преодолеть по снегу возвышенности к северо-востоку от Администрации, то можно найти еще одну оригинальную постройку — Дом лесника, расположенный на холме.Третьим значимым сооружением является Дом зверолова, он богат на ресурсы и располагается в северо-западной части локации.\n
\n&#160;&#160;Для ориентирования на местности удобно пользоваться железной дорогой, которая разбивает карту локации примерно пополам. Следуя по ней, можно попасть либо к Железнодорожному тоннелю, который приведет вас в Одинокую топь, либо к локации Железнодорожная ветка "Водопады ворона"‏ (переходной локации на Прибрежное шоссе). Если же после Железнодорожного моста свернуть налево, то вы попадете на локацию ГЭС "Картер" и окружение, переходную локацию в Отрадную долину.\n
\n&#160;&#160;Стоит также отметить, что на этой локации можно найти Запас для выживания (если только вы не играете на уровне сложности незваный гость).\n</string>
    <string name="map2text">\n&#160;&#160;Переходная локация: Железнодорожная ветка "Водопады ворона" - Ущелье (англ. Ravine), соединяет\n
▪ Загадочное озеро \n
▪ Прибрежное шоссе\n</string>
    <string name="map3text">\n&#160;&#160;Локация занимает второе место по количеству лута в игре (после Волчьей Горы). Больше всего лута сосредоточено на подлокации Прибрежный посёлок например: Гараж, двухэтажный дом, дом с камином транспорт и так далее. Однако, хорошие вещи иногда попадаются и в домиках для рыбалки. На локации есть всё для охоты и рыбалки.\n
        \n&#160;&#160;На легком уровне сложности (Пилигрим) удивляет своей мягкой погодой. На среднем уровне сложности (Скиталец) локация преображается. Играть значительно сложнее, но по сравнению с Загадочным озером все-таки попроще — домов больше, а расстояния между ними меньше. В Прибрежном посёлке, например, можно найти приличный набор одежды и продуктов на пару недель.\n
\n&#160;&#160;На уровнях сложности выше среднего перед игроком могут встать три основные проблемы: волки; достаточно низкие температуры, частый туман, особенно по утрам; недостаток определённого вида лута.\n
\n&#160;&#160;Теперь подробнее. Волки встречаются почти везде, где ждешь их и где не ждешь. То есть без оружия или пачки факелов передвигаться затруднительно. К примеру, по льду залива можно относительно свободно бегать — там волков видно издалека (не считая моментов, когда наступает туман) и их можно обогнуть по дуге. Однако, если отправиться исследовать локацию выше шоссе, или неосторожно бродить по подлокациям вдоль шоссе, они могут появиться буквально прямо перед персонажем из-за любого маленького холмика. Но, как только у вас появляется ружьё — исчезают проблемы с пропитанием и с волками.\n
\n&#160;&#160;На открытой местности в метель, и просто неудачную погоду, делать нечего: температура почти всегда падает до −30 °C, очень часто вместе с ветром, который оказывает влияние ещё на −25 °C. Но это до поры до времени — одежды на локации много, оденетесь в приемлемую одежду после осмотра трех-четырех крупных домов. Опять же, напоминаю — не рвите всю одежду на ткань — оставляйте запасной комплект. Если ещё одежда в идеальном состоянии нападение одного волка может перенести, то двух — уже нет (а это будет чаще, чем вы думаете).\n</string>
    <string name="map4text">
\n&#160;&#160;Переходная локация: Старый остров между зонами/Разбитое шоссе (англ. Old Island Connector), соединяет\n
▪ Прибрежное шоссе\n
▪ Зона запустения (через Шахту №3)\n</string>
    <string name="map5text">\n&#160;&#160;На легком уровне сложности (Пилигрим) локация позволяет познакомиться с новой механикой ковки предметов. Исследовать локацию интересно — китобойные сооружения выглядят естественно, и можно потратить не один час игрового времени на исследования.\n
\n&#160;&#160;Средний уровень сложности (Скиталец) привносит существенные коррективы в безмятежное исследование локации. На мой взгляд, эта локация является сложной как на начальном этапе игры, так и на последующих.\n
\n&#160;&#160;Теперь подробнее. Готовьтесь, что ножа и топора на локации просто нет. Если один из них вам все-таки попался — вам очень крупно повезло. Отсутствие данного вида оружия не позволит вам отбиваться от волков, а также срезать мясо, шкуры и кишки с замерзших трупов оленей. Нельзя будет полноценно собирать дрова, материалы для лука и стрел, а также крафтить некоторые предметы на верстаке. Необходимо либо искать временную замену (пока не встанете на ноги) в виде ножовки и тяжёлого молота, либо сразу искать молот и уголь, чтобы пойти на китобойное судно и выковать самодельный нож и топор. На уровнях сложности Пилигрим, Скиталец и Сталкер это можно сделать сразу, в первые дни выживания, поскольку тяжелый молот на этих уровнях 100% будет в Китобойной станции. На Незваном госте молота на локации НЕ БУДЕТ абсолютно точно, поэтому на данном уровне стоит бежать из локации как можно быстрее - еды надолго не хватит.\n
\n&#160;&#160;На локации всего несколько мест, где можно разжиться хоть какой-то одеждой на замену вашей. И не факт, что найденная одежда будет хорошего качества, а это значит, что вам понадобится ткань на ремонт. А её в свободном виде мало, значит надо пускать старые матрасы и подушки на ткань, что без ножа сделать нельзя. В дополнение, отсутствие лунок для рыбалки, а также малое количество еды заставят вас выйти на охоту раньше обычного.\n
\n&#160;&#160;Волки на данной локации любят сбиваться в стаи по две-три особи. Зато медведь часто по ночам спит в своей единственной берлоге. Есть много мест на локации, где могут встретиться кролики, но оленей можно найти только в двух местах — это побережье рядом с подъёмом к подлокации Укромный уголок Кэти и пространство между Китобойным судном и Островком. В итоге, данные особенности способствуют излишней беготне через всю карту, а также некоторой задержке в появлении новых животных. \n </string>
    <string name="map6text">\n&#160;&#160;Переходная локация: ГЭС "Картер" и окружение (англ. Carter Hydro Dam  Environs), соединяет:\n
        ▪ Загадочное озеро \n ▪ Отрадную долину.\n</string>
    <string name="map7text">\n&#160;&#160;Отрадная долина является самой большой локацией в игре The Long Dark и рассчитана на опытных игроков. Представляет собой сложный район в гористой необитаемой местности с малочисленными сооружениями, оставшимися от выносливых поселенцев. На данной территории бродит немалое количество диких животных. К сложностям выживания на этой локации можно также отнести частые метели и низкие температуры.\n </string>
    <string name="map8text">\n&#160;&#160;Считается одной из самых сложных и опасных локаций в игре. Удалённый горный район, изобилующий хищниками и практически лишённый сооружений — настоящее испытание навыков выживания. Однако, благодаря обилию лута для игроков эта местность — просто рай на земле.\n
\n&#160;&#160;На локации имеется только один переход — в Отрадную долину.\n
\n&#160;&#160;Особенность данной локации — наличие последствий геомагнитной бури, или это было случайным событием с результатами крушения самолета, которое могло стать отправной точкой для развития сюжета, на данный момент еще не введенного в игру, а есть только упоминания об этом на клочке бумаги.\n
\n&#160;&#160;По территории разбросаны обломки потерпевшего крушение авиалайнера и грузовые контейнеры, который он перевозил. Самыми легкими для нахождения при исследовании локации будут обломок шасси и крыла. На вершине горного массива можно найти хвостовую часть самолета.\n
\n&#160;&#160;Различные обломки разбросаны по всему пространству локации, как такового лута с обломков собрать нельзя. Вся ценность этих подлокаций состоит в том, что при обнаружении каждой из них увеличивается процент исследованного пространства игры и делается соответствующая запись в Журнал. Если внимательно изучить список обломков, можно заметить, что носовая часть самолета на данной локации отсутствует. Возможно, она появится на этой локации или на новой локации будущих обновлениях.\n
\n&#160;&#160;Единственная постройка на локации — Хижина альпиниста, расположенная на берегу Кристального озера.\n </string>
    <string name="map9text">\n&#160;&#160;Топь представляет собой большую локацию, которая со всех сторон окружена горами. В некоторых из них можно найти небольшие пещеры для укрытия и ночлега. В остальном же это сплошное болото с тонким льдом и малочисленными постройками. На этой локации чаще, чем на других локациях, дуют сильные и холодные ветра или опускается туман. Также, отсутствует кровать для ночлега в помещении, хотя и есть матрас на подлокации Семейная ферма старого Спенса, но он находится примерно в равных условиях с кроватью в Хижине альпиниста.\n
\n&#160;&#160;На локации можно повсеместно встретить ту или иную растительность — кустарник, зеленые деревца березы и клёна, мох, грибы Рейши. Много шиповника, особенно на левой половине локации.\n </string>
</resources>